[package]
authors = ["The Rust Project Developers"]
description = "Big integer implementation for Rust"
documentation = "https://docs.rs/num-bigint"
homepage = "https://github.com/rust-num/num-bigint"
keywords = ["mathematics", "numerics", "bignum"]
categories = [ "algorithms", "data-structures", "science" ]
license = "MIT/Apache-2.0"
name = "num-bigint"
repository = "https://github.com/rust-num/num-bigint"
version = "0.2.5"
readme = "README.md"
build = "build.rs"
exclude = ["/sgx/*"]

[package.metadata.docs.rs]
features = ["std", "serde", "rand", "quickcheck"]

[[bench]]
name = "bigint"

[[bench]]
name = "factorial"

[[bench]]
name = "gcd"

[[bench]]
name = "roots"

[[bench]]
harness = false
name = "shootout-pidigits"

[dependencies]
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dependencies.num-integer]
branch = "veracruz"
default-features = false
git = "https://github.com/veracruz-project/num-integer.git"

[dependencies.num-traits]
branch = "veracruz"
default-features = false
git = "https://github.com/veracruz-project/num-traits.git"

[dependencies.rand]
optional = true
version = "0.5"
default-features = false
features = ["std"]
#Unfortunately we do not support rand vers = 0.5 in sgx

[dependencies.serde]
optional = true
version = "1.0"
default-features = false
#features = ["std", "mesalock_sgx"]
#git = "https://github.com/mesalock-linux/serde-sgx"

[dependencies.quickcheck]
optional = true
version = "0.8"
default-features = false
#git = "https://github.com/mesalock-linux/quickcheck-sgx"

[dependencies.quickcheck_macros]
optional = true
version = "0.8"
default-features = false
#git = "https://github.com/mesalock-linux/quickcheck-sgx"

[dev-dependencies.serde_test]
version = "1.0"

[features]
default = ["std"]
i128 = ["num-integer/i128", "num-traits/i128"]
std = ["num-integer/std", "num-traits/std"]
mesalock_sgx = ["sgx_tstd", "i128", "num-integer/mesalock_sgx", "num-traits/mesalock_sgx"]

[build-dependencies]
autocfg = "1"
